# vision_hackathon

./: PLAN.md  README.md
backend/: .env.example  .gitignore  local_runner.py  processor_registry.py  pyproject.toml  requirements.txt  server.py  test_fall.py  test_fall_basic.py  url_generator.py  video_stream_registry.py
backend/events/: __init__.py  detection_events.py
backend/processors/: __init__.py  base.py  combined_video_publisher.py  crying_audio_detector.py  fall_detection.py  object_detection.py  toddler_processor.py
backend/routes/: __init__.py  audio.py  video.py
backend/tools/: __init__.py  camera.py  crying_audio_check.py  notify.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/sample/: app.js  styles.css
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/daily-reports/: ReportCard.jsx  ReportDropdown.jsx
frontend/src/components/global/: Navbar.jsx
frontend/src/components/growth-trends/: GrowthCard.jsx  InsightCard.jsx  Status.jsx
frontend/src/components/home/: ActivityCard.jsx  NotificationCard.jsx  PlayButton.jsx
frontend/src/hooks/: useLiveStream.js
frontend/src/pages/: DailyReportsPage.jsx  GrowthTrendsPage.jsx  HomePage.jsx
