[project]
name = "vision-hackathon"
version = "0.1.0"
description = "Child safety monitoring system using Vision Agents"
requires-python = ">=3.12"
dependencies = [
    "vision-agents[deepgram,elevenlabs,gemini,getstream,huggingface,moondream,nvidia,ultralytics]==0.3.8",
    "vision-agents-plugins-cartesia==0.3.8",
    "python-dotenv==1.2.1",
    "roboflow==1.2.14",
    "supervision>=0.27.0.post1",
    "opencv-python==4.10.0.84",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["processors", "events", "tools"]
